src/objects/QPMS__NC_Type_Task__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Adhoc_Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NC Type</label>
        <referenceTo>QPMS__Non_Conformance_Type__c</referenceTo>
        <relationshipName>NC_Type_Task_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save owner value</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Type_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adhoc Task</fullName>
                </value>
                <value>
                    <fullName>Containment</fullName>
                </value>
                <value>
                    <fullName>Product Change</fullName>
                </value>
                <value>
                    <fullName>Functional Task</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NC Type Task</label>
    <nameField>
        <displayFormat>NCTT-{00000}</displayFormat>
        <label>NC Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC Type Tasks</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Adhoc_Task</fullName>
        <active>true</active>
        <label>Adhoc Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Closure</fullName>
        <active>true</active>
        <label>Closure</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Containment</fullName>
        <active>true</active>
        <label>Containment</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Disposition</fullName>
        <active>true</active>
        <label>Disposition</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Functional_Task</fullName>
        <active>true</active>
        <label>Functional Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Implementation</fullName>
        <active>true</active>
        <label>Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>